--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,4 @@
 * {
     margin: 0;
-}
-
-.App {
-    display: flex;
-}
-
-.App .container {
-    width: 100%;
-    height: 100vh;
-    background-color: #aaa;
-}
-
-.App .portaria {
-    flex-shrink: 0;
+    font-family: "Roboto";
 }
