--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -4,20 +4,81 @@
     height: 100vh;
     justify-content: center;
     align-items: center;
-
 }
 
-.Login > div {
+.Login form {
     display: flex;
-    padding: 32px;
-    width: 500px;
-    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, .4);
+    width: 350px;
+    padding: 40px;
     border-radius: 5px;
+    box-shadow: 0 2px 10px 0 rgba(0,0,0,.2);
     flex-direction: column;
     align-items: center;
 }
 
-.Login > div > h1 {
+.Login form > h1 {
+    font-size: 26px;
     font-weight: 300;
-    color: #333;
+    color: #555;
+    margin-bottom: 8px;
 }
+
+.Login form > p {
+    font-size: 18px;
+    font-weight: 300;
+    color: #aaa;
+}
+
+.Login form > div {
+    width: 100%;
+    margin-top: 20px;
+}
+
+.Login .input {
+    margin-bottom: 20px;
+}
+
+.Login .input > h5 {
+    color: #555;
+    font-weight: 500;
+    margin-bottom: 8px;
+}
+
+.Login .input > input {
+    width: calc(100% - 22px);
+    height: 18px;
+    padding: 10px;
+    border: 1px solid #d0d0d0;
+    border-radius: 3px;
+    transition:border .15s ease;
+    outline: none;
+    background-color: #fafafa;
+}
+
+.Login .input > input:hover {
+    border-color: #aaa;
+}
+
+.Login .input > input:focus {
+    border-color: #3498db;
+}
+
+.Login form > div button {
+    width: 100%;
+    height: 40px;
+    margin-top: 20px;
+    border: none;
+    font-size: 15px;
+    font-weight: 500;
+    border-radius: 3px;
+    transition: background-color .17s ease;
+    background-color: #3498db;
+    color: white;
+    cursor: pointer;
+    outline: none;
+}
+
+.Login form > div button:hover {
+    background-color: #2980b9;
+}
+
