--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -9,18 +9,25 @@
 .Login form {
     display: flex;
     width: 350px;
-    padding: 40px;
+    padding: 23px 32px 32px 32px;
     border-radius: 5px;
-    box-shadow: 0 2px 10px 0 rgba(0,0,0,.2);
+    box-shadow: 0 1px 5px 0 rgba(0,0,0,.4);
     flex-direction: column;
     align-items: center;
+}
+
+.Login .logo {
+    width: 108px;
+    height: 108px;
+    margin-bottom: 4px;
+    fill: #3498db;
 }
 
 .Login form > h1 {
     font-size: 26px;
     font-weight: 300;
     color: #555;
-    margin-bottom: 8px;
+    margin-bottom: 4px;
 }
 
 .Login form > p {
@@ -31,42 +38,50 @@
 
 .Login form > div {
     width: 100%;
-    margin-top: 20px;
+    margin-top: 16px;
 }
 
 .Login .input {
+    display: flex;
     margin-bottom: 20px;
+    border: 1px solid #d0d0d0;
+    border-radius: 3px;
+    background-color: #fafafa;
 }
 
-.Login .input > h5 {
-    color: #555;
-    font-weight: 500;
-    margin-bottom: 8px;
+.Login .inputLogo {
+    display: flex;
+    padding-left: 7.5px;
+    padding-right: 7.5px;
+    align-items: center;
+    border-radius: 3px;
+}
+
+.Login .inputLogo > svg {
+    fill: #999;
 }
 
 .Login .input > input {
     width: calc(100% - 22px);
     height: 18px;
-    padding: 10px;
-    border: 1px solid #d0d0d0;
+    padding: 10px 10px 10px 0;
+    border: none;
+    border-left: none;
     border-radius: 3px;
     transition:border .15s ease;
     outline: none;
-    background-color: #fafafa;
+    background-color: transparent;
+    color: #555;
 }
 
-.Login .input > input:hover {
-    border-color: #aaa;
-}
-
-.Login .input > input:focus {
-    border-color: #3498db;
+.Login .input > input::placeholder {
+    color: #aaa;
 }
 
 .Login form > div button {
     width: 100%;
     height: 40px;
-    margin-top: 20px;
+    margin-top: 4px;
     border: none;
     font-size: 15px;
     font-weight: 500;
@@ -79,6 +94,10 @@
 }
 
 .Login form > div button:hover {
+    background-color: #2980b9;
+}
+
+.Login form > div button:focus {
     background-color: #2980b9;
 }
 
