--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -4,6 +4,7 @@
     height: 100vh;
     justify-content: center;
     align-items: center;
+    background-color: #fafafa;
 }
 
 .Login form {
@@ -11,12 +12,13 @@
     width: 350px;
     padding: 23px 32px 32px 32px;
     border-radius: 5px;
-    box-shadow: 0 1px 5px 0 rgba(0,0,0,.4);
+    border: 1px solid #e6e6e6;
     flex-direction: column;
     align-items: center;
+    background-color: white;
 }
 
-.Login .logo {
+.Login form > svg {
     width: 108px;
     height: 108px;
     margin-bottom: 4px;
@@ -26,13 +28,15 @@
 .Login form > h1 {
     font-size: 26px;
     font-weight: 300;
-    color: #555;
     margin-bottom: 4px;
+    text-align: center;
+    color: #555;
 }
 
 .Login form > p {
     font-size: 18px;
     font-weight: 300;
+    text-align: center;
     color: #aaa;
 }
 
@@ -43,8 +47,8 @@
 
 .Login .input {
     display: flex;
-    margin-bottom: 20px;
-    border: 1px solid #d0d0d0;
+    margin-bottom: 16px;
+    border: 1px solid #efefef;
     border-radius: 3px;
     background-color: #fafafa;
 }
@@ -58,17 +62,21 @@
 }
 
 .Login .inputLogo > svg {
-    fill: #999;
+    fill: #aaa;
+    transition: fill .2s ease;
+}
+
+.Login .inputFocusable .inputLogo > svg {
+    fill: #3498db;
 }
 
 .Login .input > input {
     width: calc(100% - 22px);
     height: 18px;
     padding: 10px 10px 10px 0;
+    border-radius: 3px;
     border: none;
     border-left: none;
-    border-radius: 3px;
-    transition:border .15s ease;
     outline: none;
     background-color: transparent;
     color: #555;
@@ -78,7 +86,13 @@
     color: #aaa;
 }
 
-.Login form > div button {
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus {
+    -webkit-box-shadow: inset 0 0 0px 9999px #fafafa;
+}
+
+.Login form > div > button {
     width: 100%;
     height: 40px;
     margin-top: 4px;
@@ -86,18 +100,32 @@
     font-size: 15px;
     font-weight: 500;
     border-radius: 3px;
-    transition: background-color .17s ease;
+    transition: background-color .2s ease;
     background-color: #3498db;
     color: white;
-    cursor: pointer;
     outline: none;
+    opacity: .5;
 }
 
-.Login form > div button:hover {
+.Login .active:hover {
     background-color: #2980b9;
 }
 
-.Login form > div button:focus {
+.Login .active:focus {
     background-color: #2980b9;
 }
 
+.Login .active {
+    cursor: pointer;
+    opacity: 1;
+}
+
+@media (max-width: 416px) {
+    .Login form {
+        width: calc(100% - 64px);
+        height: calc(100% - 55px);
+        justify-content: center;
+        border: none;
+        border-radius: 0;
+    }
+}
