--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -45,53 +45,8 @@
     margin-top: 16px;
 }
 
-.Login .input {
-    display: flex;
+.Login .Input {
     margin-bottom: 16px;
-    border: 1px solid #efefef;
-    border-radius: 3px;
-    background-color: #fafafa;
-}
-
-.Login .inputLogo {
-    display: flex;
-    width: 40px;
-    height: 40px;
-    align-items: center;
-    justify-content: center;
-    border-radius: 3px;
-    position: absolute;
-}
-
-.Login .inputLogo > svg {
-    fill: #aaa;
-    transition: fill .2s ease;
-}
-
-.Login .inputFocusable .inputLogo > svg {
-    fill: #3498db;
-}
-
-.Login .input > input {
-    width: 100%;
-    height: 18px;
-    padding: 10px 10px 10px 40px;
-    border-radius: 3px;
-    border: none;
-    border-left: none;
-    outline: none;
-    background-color: transparent;
-    color: #555;
-}
-
-.Login .input > input::placeholder {
-    color: #aaa;
-}
-
-input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus {
-    box-shadow: inset 0 0 0px 9999px #fafafa;
 }
 
 .Login form > div > button {
@@ -109,17 +64,17 @@ input:-webkit-autofill:focus {
     opacity: .5;
 }
 
+.Login .active {
+    cursor: pointer;
+    opacity: 1;
+}
+
 .Login .active:hover {
     background-color: #2980b9;
 }
 
 .Login .active:focus {
     background-color: #2980b9;
-}
-
-.Login .active {
-    cursor: pointer;
-    opacity: 1;
 }
 
 @media (max-width: 416px) {
